--- a/packages/core/assets/scss/_base.scss
+++ b/packages/core/assets/scss/_base.scss
@@ -68,6 +68,7 @@ body {
 }
 
 .button {
+  all: unset;
   display: flex;
   align-items: center;
   text-align: center;
